--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -1,2 +1,2 @@
-<h1>Angular Seed</h1>
-<div class="more"></div>
+<img src="C:/Front-ADN/src/app/shared/img/11.jpg" />  
+<div class="more" style="background-color: red;"></div>
