--- a/src/app/feature/inventario/components/listar-inventario/listar-inventario.component.html
+++ b/src/app/feature/inventario/components/listar-inventario/listar-inventario.component.html
@@ -1,6 +1,7 @@
+<div class= "container">
 <p>listar-inventarios</p>
 <div id="pedidos">
-  <table style="width:100%">
+  <table class="table table-striped">
     <tr>
       <th>Nombre Producto</th>
       <th>Codigo Producto</th>
@@ -21,4 +22,5 @@
       </td>
     </tr>
   </table>
+</div>
 </div>
