--- a/src/app/feature/pedido/components/listar-pedido/listar-pedido.component.html
+++ b/src/app/feature/pedido/components/listar-pedido/listar-pedido.component.html
@@ -1,6 +1,7 @@
+<div class= "container">
 <p>listar-inventarios</p>
 <div id="pedidos">
-  <table style="width:100%">
+  <table class="table table-striped">
     <tr>
       <th>Codigo Producto</th>
       <th>Precio Total</th>
@@ -14,4 +15,5 @@
       <td>{{item.usuario}}</td>
     </tr>
   </table>
+</div>
 </div>
