--- a/src/app/feature/producto/components/listar-producto/listar-producto.component.html
+++ b/src/app/feature/producto/components/listar-producto/listar-producto.component.html
@@ -1,6 +1,7 @@
+<div class="container">
 <p>listar-Productos</p>
 <div id="productos">
-  <table style="width:100%">
+  <table class="table table-striped">
     <tr>
       <th>Codigo Producto</th>
       <th>Nombre</th>
@@ -18,4 +19,5 @@
       </td>
     </tr>
   </table>
+</div>
 </div>
