--- a/src/app/feature/producto/components/crear-producto/crear-producto.component.html
+++ b/src/app/feature/producto/components/crear-producto/crear-producto.component.html
@@ -1,24 +1,23 @@
+<div class="container">
 <h1>Registrar Producto</h1>
 <h3>Ejemplo validacion de formularios reactivos con directiva</h3>
-<form [formGroup]="productoForm" (ngSubmit)="cerar()">
-  <div class="row">
-    <div class="col-sm-2">
-      <label>Nombre:</label>
-    </div>
-    <div class="col-sm-4">
-      <input validar type="text" id="nombreProducto" name="descripcion" placeholder="Nombre producto"
-        class="form-control" formControlName="nombre">
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="col-sm-2">
-      <label>Precio:</label>
-    </div>
-    <div class="col-sm-4">
-      <input validar type="text" id="precioProducto" name="descripcion" placeholder="Precio producto"
-             class="form-control" formControlName="precio">
-    </div>
+
+
+<form [formGroup]="productoForm" (ngSubmit)="cerar()">
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">nombre</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" class="form-control" formControlName="nombre" validar>
+    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
   </div>
-  <input id="crear" type="submit" value="Crear">
+  <div class="mb-3">
+    <label for="exampleInputPassword1" class="form-label">precio</label>
+    <input type="text" class="form-control" id="exampleInputPassword1" class="form-control" formControlName="precio" validar>
+  </div>
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  </div>
+  <input type="submit" class="btn btn-primary" id="crear" type="submit" value="Crear">
 </form>
+</div>
